quota and delete
